--- a/src/assets/i18n/vi-VN.json
+++ b/src/assets/i18n/vi-VN.json
@@ -49,7 +49,8 @@
     "supplier-list": "Danh sách nhà cung cấp",
     "update-supplier-info": "Cập nhật thông tin nhà cung cấp",
     "update-supplier": "Cập nhật nhà cung cấp",
-    "create-supplier": "Thêm nhà cung cấp"
+    "create-supplier": "Thêm nhà cung cấp",
+    "supplier-info": "Thông tin nhà cung cấp"
   },
   "order": {
     "order": "Đơn hàng",
