--- a/src/assets/i18n/vi-VN.json
+++ b/src/assets/i18n/vi-VN.json
@@ -68,15 +68,33 @@
     "update-product": "Cập nhật sản phẩm",
     "add-product": "Thêm sản phẩm",
     "product-detail": "Thông tin chi tiết sản phẩm",
+    "product-info": "Thông tin sản phẩm",
+    "width": "Độ rộng",
+    "height": "Độ cao",
+    "weight": "Trọng lượng",
+    "length": "Độ dầy",
+    "core": "Số nhân",
+    "CPU": "Phiên bản CPU",
+    "system": "Hệ điều hành",
+    "design": "Thiết kế & Trọng lượng",
+    "screen": "Màn hình",
+    "material": "Chất liệu",
+    "GPU": "Đồ họa GPU",
+    "origin": "Xuất xứ",
+    "specifications": "Thông số kỹ thuật",
+    "camera-selfie": "Camere Selfie",
+    "camera": "Camere sau",
     "phone": "Điện thoại",
+    "confirm-delete": "Cập nhật trạng thái sản phẩm",
+    "warranty-time": "Thời gian bảo hành",
     "product-configuration": "Cấu hình sản phẩm",
     "quantity": "Số lượng",
     "remaining-products": "Sản phẩm còn lại",
     "other-products": "Sản phẩm tương tự",
+    "prices": "Giá Thành sản phẩm",
     "price": "Đơn giá",
     "original-price": "Giá gốc",
     "sale-price": "Giá khuyến mãi",
-    "specifications": "Đặc điểm kỹ thuật",
     "color": "Màu sắc",
     "sold": "Đã bán",
     "ram": "RAM",
@@ -114,7 +132,9 @@
     "invalid-color": "Màu sắc là bắc buộc",
     "invalid-rom": "ROM là bắc buộc",
     "invalid-ram": "RAM là bắc buộc",
-    "invalid-product-name": "Tên sản phẩm là bắc buộc"
+    "invalid-product-name": "Tên sản phẩm là bắc buộc",
+    "invalid-origin": "Xuất xứ sản phẩm là bắc buộc",
+    "invalid-warranty-time": "Thời gian bảo hành là bắc buộc"
   },
   "placeholder": {
     "input-sup-name": "Nhập tên nhà cung cấp",
@@ -132,7 +152,9 @@
     "input-ram": "Nhập cấu hình ram",
     "input-rom": "Nhập cấu hình rom",
     "input-description": "Nhập mô tả sản phẩm",
-    "input-product-name": "Nhập tên sản phẩm "
+    "input-product-name": "Nhập tên sản phẩm ",
+    "input-origin": "Nhập xuất xứ sản phẩm",
+    "input-warranty-time": "Nhập thời gian bảo hành sản phẩm"
   },
   "search": "Tìm kiếm",
   "account": "Tài khoản",
