update last date 26/11

--- a/src/assets/i18n/vi-VN.json
+++ b/src/assets/i18n/vi-VN.json
@@ -109,7 +109,8 @@
     "edit-rom": "Cập nhật cấu hình ROM",
     "add-ram": "Thêm cấu hình RAM",
     "edit-ram": "Cập nhật cấu hình RAM",
-    "description": "Mô tả sản phẩm"
+    "description": "Mô tả sản phẩm",
+    "add_image": "Hình ảnh sản phẩm"
   },
   "notification": {
     "notification": "Thông báo",
