--- a/src/assets/i18n/vi-VN.json
+++ b/src/assets/i18n/vi-VN.json
@@ -172,7 +172,7 @@
     "input-warranty-time": "Nhập thời gian bảo hành sản phẩm",
     "input-code": "Nhâp mã giảm giá",
     "input-quantity": "Nhập số lượng",
-    "input-discount_value": "Nhập giá trị",
+    "input-discount-value": "Nhập giá trị",
     "choose-supplier": "Chọn nhà cung cấp",
     "choose-product": "Chọn sản phẩm",
     "choose-brand": "Chọn thương hiệu",
