--- a/src/assets/i18n/en-US.json
+++ b/src/assets/i18n/en-US.json
@@ -1,162 +1,338 @@
 {
   "language": {
-    "languages": "Language",
+    "languages": "Languages",
     "en-US": "English",
-    "vi-VN": "Vietnamese"
+    "vi-VN": "vietnamese"
   },
   "auth": {
-    "title": "enter email and password",
-    "already-have-an-account": "Already have an account?",
+    "title": "Input your email anh password",
     "login": "Login",
-    "donot-have-an-account": "Don't have an account?",
     "register": "Register",
-    "registration": "Registration",
     "logout": "Logout",
-    "change-password": "Change password"
+    "change-password": "Change",
+    "registration": "Registration",
+    "already-have-an-account": "already have an account?",
+    "donot-have-an-account": "Don't have an account?",
+
+    "login-failed": "Login failed!",
+    "register-failed": "Register is success!"
   },
   "user": {
-    "user-info": "User information",
-    "list-employee": "Employee List",
-    "list-customer": "Customers List",
-    "edit-user": "Edit user information",
-    "edit-user-info": "Edit user",
-    "role": "User role",
     "user-manage": "User manage",
+    "customer": "Customer",
+    "customer-list": "Customer list",
+    "employee": "Employee",
+    "employee-list": "Employee list",
+    "employee-create": "Create employee",
+    "user-info": "User information",
+    "user-delete": "Delete user",
+    "user-info-update": "Update user information",
+    "role": "User role",
     "profile": "Profile",
     "avatar": "Avatar",
     "username": "Username",
-    "birthdate": "Birthday",
+    "birthdate": "Birthdate",
     "gender": "Gender",
-    "phone-number": "Phone",
-    "email": "Email",
+    "phone-number": "Phone nummber",
+    "email": "Email address",
     "password": "Password",
-    "password-confirm": "Confirm",
+    "password-confirm": "Confirm password",
     "address": "Address",
-    "province": "Province/City",
-    "district": "District",
+    "province": "Provinces",
+    "district": "Districts",
     "ward": "Wards",
     "male": "Male",
     "female": "Female",
     "description": "Description",
-    "customer": "Customers",
-    "employee": "Employee",
-    "delete-user": "Delete user",
-    "update-user": "Update user",
-    "create-user": "Create user",
-    "supplier": "Supplier",
-    "supplier-list": "Supplier list",
-    "update-supplier-info": "Update supplier information",
-    "update-supplier": "Update supplier",
-    "create-supplier": "Create supplier",
-    "supplier-info": "Supplier information"
+    "choose-file": "Choose file",
+    "user-create": "Create user",
+    "user-update": "Edit user",
+    "create-success": "Create user is success!",
+    "update-success": "Update user is success!",
+    "delete-success": "Delete user is success!",
+    "create-failed": "Create user is failed!",
+    "update-failed": "Update user is failed!",
+    "delete-failed": "Delete user is failed!"
+  },
+  "supplier": {
+    "supplier": "Suppliers",
+    "supplier-list": "Suppliers list",
+    "supplier-info-update": "Update supplier information",
+    "supplier-update": "Edit supplier",
+    "supplier-create": "Create supplier",
+    "supplier-info": "Supplier information",
+    "supplier-name": "Supplier name",
+    "change-supplier": "Change supplier",
+    "create-success": "Create supplier is success!",
+    "update-success": "Update supplier is success!",
+    "delete-success": "Delete supplier is success!",
+    "create-failed": "Create supplier is failed!",
+    "update-failed": "Update supplier is failed!",
+    "delete-failed": "Delete supplier is failed!"
   },
   "order": {
-    "order": "Order",
-    "order-detail": "Order detail",
+    "order": "Orders",
+    "order-detail": "Order details",
+    "order-list": "List orders",
     "order-tracking": "Order tracking",
     "temporary": "Temporary",
     "delivery-cost": "Delivery cost",
     "sale": "Sale",
-    "discount-code": "Discount code"
+    "discount-code": "Coupons"
   },
   "product": {
-    "product": "Product",
-    "list-product": "Product list",
-    "update-product": "Update product",
-    "add-product": "Create product",
-    "product-detail": "Product detail",
+    "product": "Products",
+    "product-name": "Product name",
+    "product-list": "Products list",
+    "product-update": "Edit product",
+    "product-create": "Create product",
+    "product-detail": "Product details",
+    "product-info": "Product information",
+    "image": "Product images",
+    "width": "Width",
+    "height": "Height",
+    "weight": "Weight",
+    "depth": "Depth",
+    "core": "Core",
+    "CPU": "CPU",
+    "system": "Operating system",
+    "design": "Design",
+    "screen": "Screen",
+    "material": "Product material",
+    "GPU": "GPU",
+    "origin": "Original",
+    "specifications": "Specifications",
+    "camera-selfie": "Camere Selfie",
+    "camera": "Camere",
     "phone": "Phone",
-    "Laptop": "Laptop",
+    "confirm-delete": "Delete product",
+    "confirm-published": "Update product status",
+    "warranty-time": "Product warranty period",
     "product-configuration": "Product configuration",
     "quantity": "Quantity",
     "remaining-products": "Remaining products",
-    "other-products": "Other products",
+    "products-other": "Other",
     "price": "Price",
     "original-price": "Original price",
     "sale-price": "Sale price",
-    "specifications": "Specifications",
     "color": "Color",
     "sold": "Sold",
     "ram": "RAM",
     "rom": "ROM",
-    "ram-config": "RAM configuration",
-    "rom-config": "ROM configuration",
-    "color-config": "Color configuration",
-    "config": "configuration"
+    "ram-config": "Ram config",
+    "rom-config": "rom config",
+    "color-config": "color Config",
+    "config": "Configuration",
+    "add-color": "Create color",
+    "edit-color": "Update color config",
+    "add-rom": "Create Rom config",
+    "edit-rom": "Update Rom config",
+    "add-ram": "Create Ram config",
+    "edit-ram": "Update Ram config",
+    "description": "Description",
+    "add-image": "Add image",
+    "create-success": "Create product is success!",
+    "update-success": "Edit product is success!",
+    "delete-success": "Delete product is success!",
+    "create-failed": "Create product is failed!",
+    "update-failed": "Edit product is failed!",
+    "delete-failed": "Delete product is failed!"
   },
   "notification": {
     "notification": "Notification",
-    "invalid-email": "Email is required.",
-    "invalid-password": "Password is required.",
-    "invalid-confirm": "Password confirm is required.",
-    "invalid-username": "Username is required. ",
-    "invalid-phone": "Phone number is required ",
-    "validate-password": "Confirmation password is not correct.",
-    "message-to-customer": "Message to customer.",
-    "invalid-birthdate": "Birthdate is required.",
-    "confirm-delete": "Are you sure to delete?",
-    "confirm-update": "Are you sure to update?",
-    "confirm-create": "Are you sure you to create?",
-    "invalid-supplier-name": "Supplier name is required.",
-    "invalid-province": "Province/City is required",
-    "invalid-district": "Discount is required",
-    "invalid-ward": "Wards is required",
-    "invalid-brand": "Brand name is required"
+    "notification-list": "Danh sách thông báo",
+    "notification-create": "Thêm thông báo",
+    "invalid-email": "Địa chỉ email là bắt buộc",
+    "invalid-password": "Mật khẩu là bắt buộc",
+    "invalid-confirm": "Mật khẩu xác nhận là bắt buộc",
+    "invalid-username": "Tên người dùng là bắt buộc ",
+    "invalid-birthdate": "Ngày sinh là bắt buộc",
+    "invalid-phone": "Số điện thoại là bắt buộc",
+    "validate-password": "Mật khẩu khác nhận không đúng",
+    "message-to-customer": "Thông báo khách hàng",
+    "confirm-delete": "Bạn có chắc chắn xóa không?",
+    "confirm-update": "Bạn có muốn thay đỗi không?",
+    "confirm-create": "Bạn có muốn tạo không?",
+    "invalid-supplier-name": "Tên nhà cung cấp là bắt buộc.",
+    "invalid-supplier": "Nhà cug cấp là bắc buộc",
+    "invalid-province": "Tỉnh/thành phố là bắt buộc",
+    "invalid-district": "Quận/huyện là bắt buộc",
+    "invalid-ward": "Xã/phường là bắt buộc",
+    "invalid-brand": "Tên thương hiệu là bắc buộc",
+    "invalid-color": "Màu sắc là bắc buộc",
+    "invalid-rom": "ROM là bắc buộc",
+    "invalid-ram": "RAM là bắc buộc",
+    "invalid-product-name": "Tên sản phẩm là bắc buộc",
+    "invalid-product": "Sản phẩm là bắc buộc",
+    "invalid-origin": "Xuất xứ sản phẩm là bắc buộc",
+    "invalid-warranty-time": "Thời gian bảo hành là bắc buộc",
+    "confirm-disabled-coupons": "Vô hiệu hóa mã giảm giá?",
+    "invalid-coupons": "Mã giảm giá là bắc buộc",
+    "invalid-startdate": "Ngày bất đầu là bắc buộc",
+    "invalid-enddate": "Ngày kết thúc là bắc buộc",
+    "invalid-quantity": "Số lượng là bắc buộc",
+    "invalid-discount_value": "Giá trị mã là bắc buộc",
+    "invalid-date": "Định dạng ngày không hợp lệ",
+    "invalid-role": "Vai trò người dùng là bắc buộc",
+    "invalid-noti-title": "Tiêu đề thông báo là bắc buộc",
+    "invalid-noti-content": "Nội dung thông báo là bắc buộc",
+    "update-status-coupons": "Cập nhật trạng thái mã khuyến mãi",
+    "delete-product": "Xác nhận xóa sản phẩm?",
+    "delete-brand": "Xác nhận xóa thương hiệu?",
+    "invalid-shopname": "Tên cửa hàng là bắc buộc"
   },
   "placeholder": {
+    "input-fullname": "Input your fullname",
+    "choose-role": "Choose your role",
+    "input-birthdate": "Input your birthdate",
     "input-sup-name": "Input supplier name",
-    "input-phone": "Input phone number",
-    "input-email": "Input email address",
+    "input-phone": "Input your phone nummber",
+    "input-sup-phone": "Input supplier phone",
+    "input-email": "Input your email address",
     "input-password": "Input your password",
+    "input-password-confirm": "Input password confirm",
     "input-address": "Input your address",
     "input-sup-address": "Input supplier address",
-    "choose-province": "Choose province/city",
-    "choose-district": "Choose district",
+    "choose-province": "Choose provinces",
+    "choose-district": "Choose districts",
     "choose-ward": "Choose wards",
-    "input-des": "Input description"
+    "input-des": "Input description",
+    "input-brand": "Input brand name",
+    "input-color": "Input Color config",
+    "input-ram": "Input Ram config",
+    "input-rom": "Nhập cấu hình rom",
+    "input-description": "Input description",
+    "input-product-name": "Input product name",
+    "input-origin": "Input product original",
+    "input-warranty-time": "Input product warranty time",
+    "input-code": "Input discount code",
+    "input-quantity": "Input quantity",
+    "input-discount-value": "Input discount value",
+    "choose-supplier": "Choose supplier",
+    "choose-product": "Choose product",
+    "choose-brand": "Choose brand",
+    "input-system": "Input operating system",
+    "input-core": "Input core",
+    "input-CPU": "Input CPU version",
+    "choose-ram": "Choose Ram config",
+    "choose-rom": "Choose Rom config",
+    "choose-color": "Choose color config",
+    "input-GPU": "Input GPU config",
+    "input-camera": "Input camera config",
+    "input-camera-selfie": "Input camera selfie config",
+    "input-screen": "Input screen config",
+    "input-material": "Input product material",
+    "input-width": "Input width",
+    "input-height": "Input height",
+    "input-depth": "Input depth",
+    "input-weight": "Input quantity",
+    "choose-file": "Choose file",
+    "input-price": "Input product price",
+    "input-sale-price": "Input sale price",
+    "input-banner": "Input banner's name",
+    "input-noti-title": "Input notification's title",
+    "input-noti-content": "Input notification's content",
+    "input-shopname": "Input shop name"
   },
-
   "search": "Search",
   "account": "Account",
   "cart": {
     "cart": "Cart",
-    "add-to-cart": "Add to your cart",
+    "add-to-cart": "Add to cart",
     "select-all": "Select all"
   },
   "help": "Help",
   "home": "Home",
-  "brands": "Brands",
   "brand": {
-    "list-brand": "List of brands",
-    "edit-brand": "Update brand",
-    "add-brand": "Create brand",
-    "delete-brand": "Delete brand",
-    "name": "Name",
-    "published": "Publish"
+    "brand": "Brands",
+    "brand-list": "Brands list",
+    "brand-update": "Update brand",
+    "brand-add": "Create brand",
+    "brand-delete": "Delete brand",
+    "name": "Brand's name",
+    "published": "Published",
+    "update-status": "Update brand's status",
+    "create-success": "Create brand is success!",
+    "update-success": "Update brand is success!",
+    "delete-success": "Delete brand is success!",
+    "create-failed": "Create brand is failed!",
+    "update-failed": "Update brand is failed!",
+    "delete-failed": "Delete brand is failed!"
   },
-  "save": "Save",
-  "buy": "Buy now",
-  "cancel": "Cancel",
-  "total-amount": "Total amount",
+  "coupons": {
+    "coupons-list": "Coupons list",
+    "coupons-update": "Update coupons",
+    "coupons-delete": "Delete coupons",
+    "start-date": "Start date",
+    "end-date": "End date",
+    "discount-value": "Discount value",
+    "disabled": "Disabled",
+    "used-quantity": "Used quantity",
+    "code": "Code",
+    "coupons-create": "Create coupons",
+    "date": "Release date",
+    "create-success": "Create couponse is success!",
+    "update-success": "Update couponse is success!",
+    "delete-success": "Delete couponse is success!",
+    "create-failed": "Create couponse is failed!",
+    "update-failed": "Update couponse is failed!",
+    "delete-failed": "Delete couponse is failed!"
+  },
+  "save": "Lưu thông tin",
+  "buy": "Chọn mua",
+  "cancel": "Hủy bỏ",
+  "total-amount": "Thành tiền",
   "id": "ID",
-  "menu": "Menu",
-  "message": "Message",
+  "menu": "Tùy chọn",
+  "message": "Tin nhắn",
   "warehouse": {
-    "warehouse": "Warehouse",
-    "receipt-note": "Goods received note",
-    "add-receipt-note": "Add goods received note",
-    "list-receipt-note": "List of goods received note"
+    "warehouse": "Kho hàng",
+    "receipt-edit": "Cập nhật phiếu nhập kho",
+    "receipt-detail": "Thông tin chi tiết phiếu nhập",
+    "receipt-note": "Phiếu nhập kho hàng",
+    "create-receipt-note": "Tạo phiếu nhập kho",
+    "list-receipt-note": "Danh sách phiếu nhập kho",
+    "user": "Người lập phiếu",
+    "create-success": "Thêm phiếu nhập kho thành công!",
+    "update-success": "Cập nhật phiếu nhập kho thành công!",
+    "delete-success": "Xóa phiếu nhập kho thành công!",
+    "create-failed": "Thêm phiếu nhập kho không thành công!",
+    "update-failed": "Cập nhật phiếu nhập kho không thành công!",
+    "delete-failed": "Xóa phiếu nhập kho thành công!"
   },
-  "banner": "Banner",
+  "banner": {
+    "banner": "Banners",
+    "banner-list": "Banners list",
+    "banner-create": "Create banner",
+    "banner-update": "Edit banner",
+    "banner-delete": "Delete banner",
+    "update-status": "Update banner's status",
+    "image": "Imgae",
+    "name": "banner's name"
+  },
+  "regStaff": "Register Staff",
+
   "shop-info": "Shop information",
+  "shop-name": "Shop name",
+
   "edit": "Edit",
   "add": "Add",
   "delete": "Delete",
   "view": "View",
-  "regDate": "Date created",
+  "regDate": "Create at",
   "update": "Update",
-  "ok": "OK",
-  "publish": "Publish",
-  "change-password": "Change password",
-  "no.": "ID"
+  "ok": "Ok",
+  "publish": "Published",
+  "no.": "ID",
+  "close ": "close",
+  "total-price": "Total price",
+  "pay": "Paying",
+  "file": "File",
+  "choose": "Choose",
+  "upload-image": "Upload file",
+  "clear": "Clear",
+  "status": "Status",
+  "title": "Title",
+  "content": "Content",
+  "published": "Published"
 }
