--- a/src/assets/i18n/vi-VN.json
+++ b/src/assets/i18n/vi-VN.json
@@ -46,6 +46,7 @@
     "description": "Mô tả",
     "choose-file": "Chọn hình ảnh",
     "user-create": "Thêm người dùng",
+    "user-update": "Cập nhật người dùng",
     "create-success": "Thêm người dùng thành công!",
     "update-success": "Cập nhật người dùng thành công!",
     "delete-success": "Xóa người dùng thành công!",
@@ -147,6 +148,7 @@
     "invalid-username": "Tên người dùng là bắt buộc ",
     "invalid-birthdate": "Ngày sinh là bắt buộc",
     "invalid-phone": "Số điện thoại là bắt buộc",
+    "input-sup-phone": "Nhập số điện thoại nhà cung cấp",
     "validate-password": "Mật khẩu khác nhận không đúng",
     "message-to-customer": "Thông báo khách hàng",
     "confirm-delete": "Bạn có chắc chắn xóa không?",
